mcs/mbas/Test/errors/VariablesC4.vb
REM LineNo: 6
REM ExpectedError: BC30302
REM ErrorMessage: Type character '@' cannot be used in a declaration with an explicit type.

Module VariableC4
    Dim v@ as Integer

	Sub Main()
	End Sub
End Module
